修复SonarQube中的Code Smell